@@ -45,7 +45,8 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_FONT_WEIGHT,
   GST_TTML_ATTR_TEXT_DECORATION,
   GST_TTML_ATTR_ORIGIN,
-  GST_TTML_ATTR_EXTENT
+  GST_TTML_ATTR_EXTENT,
+  GST_TTML_ATTR_BACKGROUND_REGION_COLOR
 } GstTTMLAttributeType;
 
 /* Event types */
